[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/diegocabezadehuevo.png" type="Texture" id=1]
[ext_resource path="res://pony.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 846.103, 362.723 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 845.163, 614.953 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 81.1486, 101.258 )

[node name="Node2D" type="Node2D"]
position = Vector2( 93.6301, -6.02381 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( -0.0331421, -0.256104 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
flip_h = true

[node name="hurtbox" type="Area2D" parent="KinematicBody2D/Sprite" groups=[
"danioEnemigo",
]]
position = Vector2( 0, 150 )
collision_layer = 2
collision_mask = 12

[node name="collhurtbox" type="CollisionShape2D" parent="KinematicBody2D/Sprite/hurtbox"]
position = Vector2( 16.6489, -622.672 )
shape = SubResource( 1 )

[node name="stun" type="Timer" parent="KinematicBody2D/Sprite"]
wait_time = 0.1
one_shot = true

[node name="defensa" type="Area2D" parent="KinematicBody2D/Sprite"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Sprite/defensa"]
position = Vector2( 19.9999, 520 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
visible = false
position = Vector2( 0.30349, 13.5675 )
shape = SubResource( 3 )

[node name="ataquetime" type="Timer" parent="KinematicBody2D"]
wait_time = 0.75
autostart = true

[node name="deteccion" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( -47.6584, 33.4026 )
rotation = 1.57079
enabled = true
collision_mask = 8

[node name="ataque2" type="Position2D" parent="KinematicBody2D"]
position = Vector2( -1.39914, 29.9575 )
scale = Vector2( 0.5, 0.5 )

[connection signal="area_entered" from="KinematicBody2D/Sprite/hurtbox" to="KinematicBody2D" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="KinematicBody2D/Sprite/stun" to="KinematicBody2D" method="_on_stun_timeout"]
[connection signal="area_entered" from="KinematicBody2D/Sprite/defensa" to="KinematicBody2D" method="_on_defensa_area_entered"]
[connection signal="timeout" from="KinematicBody2D/ataquetime" to="KinematicBody2D" method="_on_ataquetime_timeout"]
